vlib/v/checker/tests/unexpected_or_propagate.vv
fn ret_zero() int {
	return 0
}

fn opt_fn() ?int {
	a := ret_zero()?
	return a
}

fn main() {
	opt_fn() or {}
}
